--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
+
 {
-  "name": "foodtrust-web",
+  "name": "blockchainfoodtrust",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "next": "14.2.5"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
+  },
+  "dependencies": {
+    "next": "14.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "framer-motion": "^11.3.28"
   }
 }
