--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "10.4.17",
+    "framer-motion": "10.16.4",
     "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "framer-motion": "^11.3.28"
+    "postcss": "8.4.31",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.4.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.10"
+    "@netlify/plugin-nextjs": "5.3.0"
+  },
+  "engines": {
+    "node": ">=18 <19"
   }
 }
